signup video container no longer overlaps login modal and is now clickable

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -79,6 +79,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
 
 #login-text {
@@ -92,10 +93,15 @@
   bottom: 40px;
   flex-direction: column;
   align-items: center;
+  z-index: 0;
 }
 
 #login-text-desc {
   color: black;
   position: relative;
   bottom: 5px;
+}
+
+.modal-content {
+  z-index: 3;
 }
